@@ -8,3 +8,4 @@ gemspec :name => 'json-java'
 
 gem 'utils'
 gem 'test-unit'
+gem 'debugger', :platform => :mri_19
